# LegacyOpenGLTest

./: .gitignore  CMakeLists.txt
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: CMakeLists.txt  clock.cpp  clock.hpp  main.cpp
